add form and post request to add message

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 <h1>Home</h1>
-<% messages.forEach(message => { %>
-    <%- include ("message", {message: message})
-}) %>
+<ul>
+    <% messages.forEach(message => { %>
+        <%- include ("message", {message: message}) %>
+    <% }) %>
+</ul>
